完善注册登录页面,引入重置样式css

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -21,11 +21,11 @@ body{background:#fff;}
 a,a:hover{color:#333;}
   @font-face {
     font-family: 'iconfont';
-    src: url('../iconfont/iconfont.eot');
-    src: url('../iconfont/iconfont.eot?#iefix') format('embedded-opentype'),
-    url('../iconfont/iconfont.woff') format('woff'),
-    url('../iconfont/iconfont.ttf') format('truetype'),
-    url('../iconfont/iconfont.svg#iconfont') format('svg');
+    src: url('../fonts/iconfont.eot');
+    src: url('../fonts/iconfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/iconfont.woff') format('woff'),
+    url('../fonts/iconfont.ttf') format('truetype'),
+    url('../fonts/iconfont.svg#iconfont') format('svg');
   }
   .iconfont{
     font-family:"iconfont" !important;
